--- a/2013/1km paper/elastic_1km_cern.tex
+++ b/2013/1km paper/elastic_1km_cern.tex
@@ -170,349 +170,14 @@ General note: write a (minimal but) self-contained paper, although possibly exce
 
 
 %--------------------------------------------------
-\section{Introduction}
 
-\> motivation for low-$|t|$ measurement
-\>> why it is important and interesting
+\input introduction.tex
 
-\> historical context, previous measurements
+\input experimental_apparatus.tex
 
-\> theoretical understanding
-\>> introduce several models/frameworks, details in section \ref{sec:cni}.
+\input data_taking.tex
 
-\section{Experimental Apparatus}
-%
-The TOTEM experiment is dedicated to the measurement of the total 
-cross-section, elastic scattering
-and diffractive processes at the LHC. The experimental
-apparatus, composed of three subdetectors
-(Roman Pots (RP), T1 and T2 forward tracking telescopes), 
-is placed symmetrically on both sides of Interaction Point (IP) 5, shared
-with the CMS experiment. All three subdetectors have
-trigger capability. The Roman Pot stations, equipped with
-silicon detectors and placed at 220\,m from the IP,
-detect elastically and diffractively scattered protons with
-small scattering angles down to a few $\mu$rad. 
-Each RP station is composed of two units separated
-by a distance of about 5\,m. A unit consists of 3 RPs, two
-approaching the outgoing beam vertically and one horizontally.
-Each RP is equipped with a stack of 10 silicon
-strip detectors designed with the specific objective of
-reducing the insensitive area at the edge facing the beam
-to only a few tens of micrometers. The long lever arm
-between the near and the far RP units has two important
-advantages: the local track angles in the x and y projections
-perpendicular to the beam direction can be reconstructed
-with a precision of about $10\,\mu$rad, and a high trigger efficiency
-($> 99$\%) can be achieved as the proton trigger selection
-uses all RPs independently.
-
-The T1 and T2 telescopes, placed at about 8 and 14\,m from the IP, 
-respectively, detect charged particles produced in the polar
-angular range from a few mrad to about 100 mrad. The T1 telescope
-($3.1 < |\eta| < 4.7$) consists of Cathode Strip Chambers,
-while the T2 telescope ($5.3 < |\eta| < 6.5$) is made of
-triple-GEM (Gas Electron Multipliers) chambers.
-
-A complete description of the TOTEM detector layout is given in~\cite{jinst}.
-
-%--------------------------------------------------
-\section{Data taking}
-
-The results reported here are based on data taken in October 2012 
-in a dedicated LHC proton fill
-with very special beam properties. The beam optics with $\beta^{*} = 1000\,$m
-has been specifically developed for measuring low-$|t|$ elastic scattering.
-Like the previously used $\beta^{*} = 90\,$m optics~\cite{epl96,epl101,prl111},
-this new optics configuration
-provides parallel-to-point focussing in the vertical plane at the RP position 
-$s = 220\,m$, implemented by tuning the transport matrix elements via the
-LHC magnet currents: the magnification $v_{y}$ is made to vanish whereas the 
-effective length $L_{y}$ is maximised (285.6\,m as compared to 260\,m for 
-$\beta^{*} = 90\,$m).
-The resulting large displacement of a scattered proton with a given $t$-value 
-away from the beam centre at the RP, together with a very small beam 
-divergence in the interaction point and hence a tiny beam width 
-at the RP ($\sigma_{y} = 260\,\mu$m as compared to 700\,$\mu$m for 
-$\beta^{*} = 90\,$m) translates into 
-an acceptance for $|t|$-values down to $10^{-4}\,\rm GeV^{2}$, provided the 
-vertical RPs can approach the beam centre to only a few nominal beam standard 
-deviations~\footnote{The nominal standard deviation is defined as 
-the beam width for a normalised emittance 
-$\varepsilon \gamma = 3.5\,\mu$m\,rad.}.
-A further improvement relative to $\beta^{*} = 90\,$m is the non-vanishing 
-effective length in the horizontal plane, $L_{x} = 46.8\,$m at $s = 220\,$m, 
-enabling a better reconstruction of the horizontal component of the 
-scattering angle.
-
-The vertical RP approach to only $3\,\sigma_{y}$ from the beam centre required
-low beam currents -- two colliding bunch pairs and in each beam one 
-non-colliding bunch for background monitoring, with $10^{11}$ protons per bunch 
--- and a novel collimation strategy 
-to keep the beam halo background under control. As a first step, the primary 
-collimators (TCP) in LHC point 7 scraped the beam down to $2\,\sigma_{y}$; then 
-they were retracted to $2.5\,\sigma_{y}$, thus creating a $0.5\,\sigma_{y}$ gap 
-between
-the beam edge and the collimator jaws. With the halo strongly suppressed 
-and no collimator producing showers by touching the beam, the RPs at 
-$3\,\sigma_{y}$ were operated in a background-depleted environment for about one 
-hour until the beam-to-collimator gap was refilled by diffusion, as 
-diagnosed by the increasing RP trigger rate (Figure~\ref{fig:overview}, top). As soon as the background conditions
-had deteriorated to an unacceptable level, the beam cleaning procedure as described above was repeated, again followed by a quiet data-taking period.
-This entire sequence was iterated 6 times until the luminosity had degraded 
-from initally $2\times10^{27}\,\rm cm^{2}s^{-1}$ to 
-$0.5\times10^{27}\,\rm cm^{2}s^{-1}$ \textbf{(check!)} at which point the data yield was considered as too low. 
-During the 9 hour long fill, an integrated luminosity of $27\,\rm \mu b^{-1}$ 
-\textbf{(check!)} has been 
-accumulated, split into 6 data sets corresponding to the calm periods between
-the cleaning operations. 
-
-Due to an anti-collision protection system the top and the bottom pots of a 
-vertical RP unit could not approach each other close enough to be both at a 
-distance of $3\,\sigma_{y} = 780\,\mu$m from the beam centre. Therefore a 
-configuration with one RP diagonal (top pots left of IP5 -- bottom pots right
-of IP5) at $3\,\sigma_{y}$ and the other (bottom left -- top right) at 
-$10\,\sigma_{y}$ was chosen. The far diagonal provides a systematic comparison
-at larger $|t|$-values.
-The horizontal RPs were less critical for this measurement and placed at a
-safe distance of $10\,\sigma_{x} \approx 7.5$\,mm.
-
-The collected events were triggered by a logical \textit{OR} of: inelastic 
-trigger (activity in either arm of T1 or T2), double-arm proton trigger 
-(coincidence of any RP left of IP5 and any RP right of IP5), 
-random bunch crossings.
-
-\iffalse
-\> what data: 24-25 October 2012, how many bunches, 2 colliding bunch pairs, bunch population $10^{11}$, about 9h of data taking, luminosity, trigger, ...
-
-\> challenging environment
-\>> sizeable beam-induced background $\Rightarrow$ regular (every 1 or 2 hours) beam cleaning
-
-\> beam cleaning -- TODO: verify
-\>> RPs at $3\un{\sigma}$ retracted by $1\un{\sigma}$ for safety reasons
-\>> collimators to $2\un{\sigma}$, then retracted to $2.5\un{\sigma}$
-\>> RPs back to $3\un{\sigma}$
-
-\> different diagonal settings (due to the anti-collision switches -- but also positive aspect: better understanding of systematics)
-\>> 45 top -- 56 bottom: verticals at $3\un{\sigma}$, $|t|_{\rm min} \approx 6\cdot10^{-4}\un{GeV^2}$
-\>> 45 bottom -- 56 top: verticals at $10\un{\sigma}$, $|t|_{\rm min} \approx 3\cdot10^{-3}\un{GeV^2}$
-\>> trigger logic
-
-
-\> $\beta^* = 1000\un{m}$ optics $\Leftarrow$ need extremely low $t$ smearing
-\>> very low beam divergence
-\>> even higher effective length than the 90m optics
-\fi
-
-
-\begin{figure*}
-\begin{center}
-\includegraphics[width=16cm]{fig/overview.pdf}
-\vskip-3mm
-\caption{Illustration of the beam conditions. The T2 rate is roughly proportional to luminosity. The RP rate is sensitive to luminosity plus beam-halo. The pile-up probability follows the intensity of beam-halo protons.}
-\label{fig:overview}
-\end{center}
-\end{figure*}
-
-
-%--------------------------------------------------
-\section{Differential cross-section}
-
-
-%-------------------------
-\subsection{Alignment}
-
-\> the three methods: collimation, track-based and with physics processes
-
-\> the new approach for alignment with elastics
-\>> excellent for relative alignment (between near and far or left and right)
-\>> absolute (= wrt.~the beam) achieved with the right arm and two complementary methods:
-
-\noindent 1) standard method with vertical RPs
-\noindent 2) fitting the axis of diffractive-proton axis and extrapolation to beam position
-
-\> final uncertainty, also propagated to $\theta^*_{x, y}$ angles
-
-\> the observed hit inefficiencies -- possible asymmetries -- discuss ???
-\> mention final alignment check = 2D Gaussian fit of $\theta_x^*$ vs.~$\theta_y^*$ from both diagonals ??
-
-
-%-------------------------
-\subsection{Kinematics reconstruction}
-
-\> choice of reconstruction formulae in x and in y
-\>> guide = robustness against error sources: beam divergence, sensor pitch, misalignment, vertex term neglected, optics imperfections
-\>> two types of reconstruction: one-arm (for cuts) and two-arm (for physics)
-\>> TODO: what reco formulae used
-
-\> typical values of uncertainties: statistical (smearing) and systematic (optics, ...)
-
-%-------------------------
-\subsection{Elastic tagging}
-
-\> the three main cuts: left-right collinearity in $x$ and $y$, left-right vertex $x^*$ comparison
-\>> motivation, sigmas
-\> applied at 4 sigmas ??
-\> inefficiency of the cuts (how many true events lost)
-
-\> control cuts (not applied, used for validation only): $y^{N}$ vs.~local $\theta_y$ correlation, reconstructed $x^*$ compatible with vertex distribution?
-
-
-%-------------------------
-\subsection{Background}
-
-\> background = impurity of the cuts above
-
-\> method: plot a cut quantity under various cuts
-\>> central peak (signal) stays
-\>> tails (background) drop
-\>> residual after all cuts $\rightarrow$ interpolate to signal region $\rightarrow$ background negligible
-\>> can be repeated for any cut -- compatible results ??
-
-\> further test: $|t|$-distributions under various combinations of cuts -- background distributed uniformly over $|t|$, no peaking
-
-%-------------------------
-\subsection{Efficiencies}
-
-\> ``standard procedure'' for the standard contributions (ref. to previous publications?): ``3-out-of-4'' (uncorrelated 1-RP inefficiencies), ``shower in near'' (near-far correlated) and ``pile-up'' (coincidence with beam-halo or any other particle)
-
-\> 3-out-of-4 results
-\>> right arm: typical results (near $\approx 98\un{\%}$, far $\approx 96.5\un{\%}$ efficiency)
-\>> left arm: efficiency in far RP unexpectedly low ($\approx 90\un{\%}$) -- due to showers in horizontal RPs (horizontal in left arm closer that in the right one) -- but experimentally determinable and thus fully correctable
-
-\> pile-up results shown in Fig.~\ref{fig:overview}
-\>> strong time-dependece: linear rise within the data-taking periods, decrease in beam cleanings
-
-
-%-------------------------
-\subsection{Acceptance correction}
-
-\> ``standard procedure'' (ref. to previous publications?): ``divergence'' and ``phi'' corrections
-
-\> also applied $-50 < \theta_x^* < 80\un{\mu rad}$ selection to avoid the regions affected by the horizontal RPs
-
-
-%-------------------------
-\subsection{Unfolding of resolution effects}
-
-\> ``standard procedure'' (ref. to previous publications?)
-
-\> but time-dependent smearing sigma, determined from the variation of $\theta_y^{*R} - \theta_y^{*L}$
-\>> mention the subtlety with $\sigma(\theta_x^*)$ ?? Cannot be measured directly. The only handle comes from the emittances (crude only). But (at least for low-$|t|$), the impact of $\theta_x^*$ smearing is small -- the value of $\theta^*$ is mostly made by $\theta_y^*$, therefore $\theta_x^*$ must be very small. Consequently, $\Delta t_x = 2 \theta_x^* \Delta \theta_x^* \approx 0$
-
-\> due to the very small beam divergence, the effect is negligible for all bins except the low-$|t|$ ones where the rapid cross-section growth appears because of the Coulomb interaction
-
-%-------------------------
-\subsection{Luminosity}
-
-\> determined by fitting $\d N/\d t$ from $1000\un{m}$ to $\d\sigma/\d t$ from $90\un{m}$ (where the luminosity-independent method was applied, yielding $4\un{\%}$ uncertainty)
-
-\> full uncertainty $\approx 5\un{\%}$
-
-
-%-------------------------
-\subsection{Systematic uncertainties}
-
-\> ``standard procedure'' (ref. to previous publications?) of uncertainty assessment
-
-\> leading uncertainties: residual misalignment (very low-$|t|$), normalisation (flat)
-
-\> compatible results obtained if data right after or right before beam cleaning are used
-
-
-
-%--------------------------------------------------
-\subsection{Result}
-
-\begin{figure*}
-\begin{center}
-\includegraphics[width=16cm]{fig/plotTabulation.pdf}
-\vskip-3mm
-\caption{Differential cross-section.}
-\label{fig:dsdt}
-\end{center}
-\end{figure*}
-
-\> present/comment Fig.~\ref{fig:dsdt}
-
-\> Table with points? Now or later (in a compilation with all 8 TeV data)?
-
-
-%-------------------------
-\section{Analysis of Coulomb-nuclear interference region}
-\label{sec:cni}
-
-\> general note: approach = not just a blind fit, but probe and test
-
-\> key elements of phenomenology/theory of Coulomb-nuclear interference
-\>> Coulomb amplitude: ``well'' known
-\>> interference formula: SWY (traditionally used) or KL (theoretically more appropriate)
-\>> modulus of nuclear amplitude -- strongly constrained by data $\Rightarrow$ exponential parametrisation $\d\sigma / \d t \propto \exp( -B(t) )$; reasonable degrees of the $B(t)$ polynomial are $N_b = 1, 2, 3$ (describes well the data and many phenomenological models); $N_b = 1$ gently disfavoured by the data ($B(t)$ plots, worse fits); fit amplitude anchored to $90\un{m}$ data at $|t| > 0.2\un{GeV^2}$
-\>> phase of nuclear amplitude -- weak guidance from data $\Rightarrow$ need assumption: constant, central, peripheral (the last two as from \cite{kl94})
-
-\> two goals
-\>> distinction between different models/assumptions: interference formula, phase of nuclear amplitude, degree of the $B(t)$ polynomial. See section \ref{sec:cni dist mod}.
-
-\>> determination of parameters of interest (e.g.~$\rho$, total cross-section with Coulomb taken into account), for certain reasonable models/assumptions. In section \ref{sec:cni par det}.
-
-
-%-------------------------
-\subsection{Parameter determination}
-\label{sec:cni par det}
-
-\> general comment: need to work with certain theoretical framework (assumption), the following chosen
-\>> with SWY: only constant phase and $N_b = 1$
-\>> with KL: nuclear phase constant/central/peripheral, $N_b = 1, 2, 3$ (exclude 1 ??)
-
-\> central/peripheral phases: parametrisations as in \cite{kl94}, but refitted at $8\un{TeV}$ -- some details of the fitting ??
-\>> uncertainties of the phase parameters -- {\bf waiting for the input from Vojt\v ech}.
-
-
-\> generalised $\chi^2$ fits (covariance matrix contained all relevant contributions: statistical, normalisation and misalignment), fits driven by Minuit
-
-\> extensive MC tests (input: phenomenological models as well as data fits)
-\>> check for bias: only small
-\>> understanding/evaluation of the method response to statistical and systematic uncertainties
-
-\> results ($\rho$, $\sigma_{\rm tot}$, $B^{\rm N}(0)$, ...)
-\>> for the model choices above -- keeping phase parameters fixed at their central values from Vojt\v ech
-\>> for peripheral-phase parameters being varied within their uncertainties $\Rightarrow$ uncertainty band
-
-\> question: do we want to present a single-value result for $\rho$ (combined from fits under different models) ??
-
-\> discuss the new value of $\sigma_{\rm tot}$ in comparison to our previous measurement \cite{prl111}; values compatible; remind in what is the new measurement better ??
-
-\> reference to Fig.~\ref{fig:rho_s}
-
-\begin{figure*}
-\begin{center}
-\includegraphics[width=16cm]{fig/rho_s.pdf}
-\vskip-3mm
-\caption{$\rho$ as a function of $s$.}
-\label{fig:rho_s}
-\end{center}
-\end{figure*}
-
-\> figure for $\sigma_{\rm tot}$ result ?? 
-
-%-------------------------
-\subsection{Distinction between different models}
-\label{sec:cni dist mod}
-
-\> wish to discriminate between
-\>> SWY and KL interference formulae: very little difference predicted, not possible with the current data (prove/illustrate)
-\>> constant/central phase: very little difference predicted, not possible with the current data (prove/illustrate)
-\>> constant/peripheral phase: gentle (percent) effect at higher-$|t|$ region
-\>> degree of the $B(t)$ polynomial
-
-\> match metrics: Kolmogorov-like (explain!). Integration from right optimises sensitivity in higher-$|t|$ region where the effect of different phases is more significant (as opposed to the low-$|t|$ region mostly sensitive to $\rho$)
-\>> why not using $\chi^2$: all points mixed $\Rightarrow$ not enough sensitivity
-
-\> minimisation engines: custom developed simplex minimisation with simulated annealing (according to the Numerical Recipes)
-\>> scans used to validate the algorithm
-
-TODO: the rest
-
+\input coulomb.tex
 
 %--------------------------------------------------
 \section{Discussion/Conclusions}
