--- a/2013/1km paper/elastic_1km_cern.tex
+++ b/2013/1km paper/elastic_1km_cern.tex
@@ -162,7 +162,18 @@ J.~Whitmore\Iref{10}
 
 %\newpage
 \begin{abstract}
-Abstract ...
+The TOTEM experiment at the CERN LHC has measured elastic proton-proton 
+scattering at the centre-of-mass energy 
+$\sqrt{s}=8\,$TeV and squared four-momentum transfers $|t|$ from $6\times10^{-4}\,\rm GeV^{2}$ to ...?
+Near the lower end of the $t$-interval, for
+$|t|\lesssim 2\times10^{-3}\,\rm GeV^{2}$, the differential cross-section is 
+sensitive to the 
+interference between the hadronic and the electromagnetic scattering amplitudes.
+This article presents the measured cross-section and its interpretation for 
+different assumptions on the functional form of the interference term. In 
+particular, the $\rho$-parameter, i.e. the ratio between the real and the 
+imaginary parts of the forward hadronic elastic amplitude, was determined.
+\textbf{Give value here? For which case?}
 \end{abstract}
 \end{titlepage}
 
